unpackaged/main/default/objects/zkmulti__Detail_Field__c/zkmulti__Detail_Field__c.object-meta.xml
<CustomObject>
    <label>Detail Field</label>
    <nameField>
        <displayFormat>DF-{0000000}</displayFormat>
        <label>Detail Field Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Detail Fields</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>