unpackaged/main/default/objects/zkmulti__Detail_Field__c/fields/zkmulti__Checkbox__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Checkbox</label>
    <type>Checkbox</type>
</CustomField>