unpackaged/main/default/objects/zkmulti__Detail_Field__c/fields/zkmulti__Currency__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Currency__c</fullName>
    <label>Currency</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>