unpackaged/main/default/objects/zkmulti__Detail_Field__c/fields/zkmulti__Customs_Item__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Customs_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customs Item</label>
    <referenceTo>zkmulti__MCCustoms_Item__c</referenceTo>
    <relationshipLabel>Detail Fields</relationshipLabel>
    <relationshipName>Detail_Fields</relationshipName>
    <type>Lookup</type>
</CustomField>