unpackaged/main/default/objects/zkmulti__Detail_Field__c/fields/zkmulti__Date__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Date__c</fullName>
    <label>Date</label>
    <type>Date</type>
</CustomField>