unpackaged/main/default/objects/zkmulti__Detail_Field__c/fields/zkmulti__Package__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Package__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Package</label>
    <referenceTo>zkmulti__MCPackage__c</referenceTo>
    <relationshipLabel>Detail Fields</relationshipLabel>
    <relationshipName>Detail_Fields</relationshipName>
    <type>Lookup</type>
</CustomField>