unpackaged/main/default/objects/zkmulti__Detail_Field__c/fields/zkmulti__Text_Area__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Text_Area__c</fullName>
    <label>Text Area</label>
    <type>TextArea</type>
</CustomField>